--- a/package.json
+++ b/package.json
@@ -1,30 +1,35 @@
 {
-  "name": "gatsby-starter-wordpress",
-  "description": "Gatsby v2 starter for WordPress",
+  "name": "ember-gardens-com",
+  "description": "Ember Gardens v1",
   "version": "0.1.0",
-  "author": "GatsbyCentral.com",
+  "author": "Tim Spears <tspears1@gmail.com>",
   "dependencies": {
-    "bulma": "^0.7.5",
-    "gatsby": "^2.18.1",
+    "gatsby": "^3.11.1",
     "gatsby-awesome-pagination": "^0.3.3",
-    "gatsby-plugin-lodash": "^3.1.7",
-    "gatsby-plugin-netlify": "^2.1.12",
+    "gatsby-cli": "^3.12.0",
+    "gatsby-plugin-gatsby-cloud": "^2.11.0",
+    "gatsby-plugin-image": "^1.11.0",
+    "gatsby-plugin-lodash": "^4.13.0",
+    "gatsby-plugin-manifest": "^3.11.0",
+    "gatsby-plugin-offline": "^4.11.0",
     "gatsby-plugin-purgecss": "^4.0.1",
-    "gatsby-plugin-react-helmet": "^3.1.7",
-    "gatsby-plugin-sass": "^2.1.14",
-    "gatsby-plugin-sharp": "^2.2.21",
-    "gatsby-remark-images": "^3.1.21",
-    "gatsby-source-filesystem": "^2.1.22",
-    "gatsby-source-wordpress": "^3.1.31",
-    "gatsby-transformer-remark": "^2.6.22",
-    "gatsby-transformer-sharp": "^2.2.14",
+    "gatsby-plugin-react-helmet": "^4.11.0",
+    "gatsby-plugin-sass": "^4.13.0",
+    "gatsby-plugin-sharp": "^3.11.0",
+    "gatsby-remark-images": "^5.10.0",
+    "gatsby-source-filesystem": "^3.11.0",
+    "gatsby-source-wordpress": "^5.12.0",
+    "gatsby-transformer-remark": "^4.10.0",
+    "gatsby-transformer-sharp": "^3.11.0",
     "lodash": "^4.17.5",
     "node-sass": "^4.12.0",
+    "node-sass-glob-importer": "^5.3.2",
+    "normalize-scss": "^7.0.1",
     "parcel-bundler": "^1.12.3",
-    "prop-types": "^15.6.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-helmet": "^5.2.1",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "uuid": "^3.3.3"
   },
   "keywords": [
@@ -39,7 +44,7 @@
     "develop": "npm run clean && gatsby develop",
     "serve": "gatsby serve",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "devDependencies": {
     "eslint-config-airbnb": "^18.0.1",
