--- a/package.json
+++ b/package.json
@@ -1,60 +1,52 @@
 {
-  "name": "ember-gardens-com",
-  "description": "Ember Gardens v1",
-  "version": "0.1.0",
-  "author": "Tim Spears <tspears1@gmail.com>",
+  "name": "gatsby-starter-wordpress-blog",
+  "private": true,
+  "description": "A starter for a blog powered by Gatsby and Markdown",
+  "version": "1.0.0",
+  "author": "Kyle Mathews <mathews.kyle@gmail.com> and Tyler Barnes <tylerdbarnes@gmail.com>",
+  "bugs": {
+    "url": "https://github.com/gatsbyjs/gatsby/issues"
+  },
   "dependencies": {
-    "gatsby": "^3.11.1",
-    "gatsby-awesome-pagination": "^0.3.3",
-    "gatsby-cli": "^3.12.0",
-    "gatsby-plugin-gatsby-cloud": "^2.11.0",
-    "gatsby-plugin-image": "^1.11.0",
-    "gatsby-plugin-lodash": "^4.13.0",
-    "gatsby-plugin-manifest": "^3.11.0",
-    "gatsby-plugin-offline": "^4.11.0",
-    "gatsby-plugin-purgecss": "^4.0.1",
-    "gatsby-plugin-react-helmet": "^4.11.0",
-    "gatsby-plugin-sass": "^4.13.0",
-    "gatsby-plugin-sharp": "^3.11.0",
-    "gatsby-remark-images": "^5.10.0",
-    "gatsby-source-filesystem": "^3.11.0",
-    "gatsby-source-wordpress": "^5.12.0",
-    "gatsby-transformer-remark": "^4.10.0",
-    "gatsby-transformer-sharp": "^3.11.0",
-    "lodash": "^4.17.5",
-    "node-sass": "^4.12.0",
-    "node-sass-glob-importer": "^5.3.2",
-    "normalize-scss": "^7.0.1",
-    "parcel-bundler": "^1.12.3",
-    "prop-types": "^15.7.2",
+    "gatsby": "^3.3.0",
+    "gatsby-image": "^3.3.0",
+    "gatsby-plugin-manifest": "^3.3.0",
+    "gatsby-plugin-offline": "^4.3.0",
+    "gatsby-plugin-react-helmet": "^4.3.0",
+    "gatsby-plugin-sharp": "^3.3.0",
+    "gatsby-source-filesystem": "^3.3.0",
+    "gatsby-source-wordpress": "^5.3.0",
+    "gatsby-transformer-sharp": "^3.3.0",
+    "html-react-parser": "^1.1.1",
+    "lodash": "^4.17.20",
+    "postcss": "^8.2.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0",
-    "uuid": "^3.3.3"
+    "react-helmet": "^5.2.1",
+    "typeface-merriweather": "1.1.13",
+    "typeface-montserrat": "1.1.13"
   },
+  "devDependencies": {
+    "dumper.js": "^1.3.1",
+    "prettier": "2.2.1"
+  },
+  "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
     "gatsby"
   ],
-  "license": "MIT",
+  "license": "0BSD",
   "main": "n/a",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gatsbyjs/gatsby-starter-blog.git"
+  },
   "scripts": {
+    "build": "gatsby build",
+    "develop": "gatsby develop",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
-    "clean": "rimraf .cache public",
-    "build": "npm run clean && gatsby build",
-    "develop": "npm run clean && gatsby develop",
     "serve": "gatsby serve",
-    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
+    "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
-  },
-  "devDependencies": {
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.3.0",
-    "prettier": "^1.18.2",
-    "rimraf": "^3.0.0"
-  },
-  "prettier": {
-    "trailingComma": "es5",
-    "semi": false,
-    "singleQuote": true
   }
 }
