--- a/package.json
+++ b/package.json
@@ -1,36 +1,51 @@
 {
-  "name": "gatsby-starter-wordpress-blog",
+  "name": "ember-gardens-com",
   "private": true,
-  "description": "A starter for a blog powered by Gatsby and Markdown",
-  "version": "1.0.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com> and Tyler Barnes <tylerdbarnes@gmail.com>",
+  "description": "Ember Gardens v1",
+  "version": "0.1.0",
+  "author": "Tim Spears <tspears1@gmail.com>",
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/embergardens/ember-gardens-com/issues"
   },
   "dependencies": {
     "gatsby": "^3.3.0",
+    "gatsby-awesome-pagination": "^0.3.3",
+    "gatsby-cli": "^3.14.0",
     "gatsby-image": "^3.3.0",
+    "gatsby-plugin-gatsby-cloud": "^3.2.0",
     "gatsby-plugin-manifest": "^3.3.0",
     "gatsby-plugin-offline": "^4.3.0",
+    "gatsby-plugin-purgecss": "^6.0.2",
     "gatsby-plugin-react-helmet": "^4.3.0",
+    "gatsby-plugin-sass": "^4.14.0",
     "gatsby-plugin-sharp": "^3.3.0",
     "gatsby-source-filesystem": "^3.3.0",
     "gatsby-source-wordpress": "^5.3.0",
     "gatsby-transformer-sharp": "^3.3.0",
     "html-react-parser": "^1.1.1",
     "lodash": "^4.17.20",
+    "mitt": "^3.0.0",
     "postcss": "^8.2.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^5.2.1",
+    "sass": "^1.42.1",
     "typeface-merriweather": "1.1.13",
-    "typeface-montserrat": "1.1.13"
+    "typeface-montserrat": "1.1.13",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "dumper.js": "^1.3.1",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.3.0",
     "prettier": "2.2.1"
   },
-  "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
+  "prettier": {
+    "trailingComma": "es5",
+    "semi": false,
+    "singleQuote": true
+  },
+  "homepage": "https://github.com/embergardens/ember-gardens-com#readme",
   "keywords": [
     "gatsby"
   ],
@@ -38,12 +53,12 @@
   "main": "n/a",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gatsbyjs/gatsby-starter-blog.git"
+    "url": "git+https://github.com/embergardens/ember-gardens-com.git"
   },
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
+    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
