add template class

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,7 @@
     "import/no-named-as-default": "off",
     "import/no-named-as-default-member": "off",
     "import/prefer-default-export": "off",
-    "prefer-destructuring": "off",
+    "prefer-destructuring": "off"
   },
   "settings": {
     "import/core-modules": []
