--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "dotenv": "^8.6.0",
+    "framer-motion": "^5.2.1",
     "gatsby": "^4.0.0",
     "gatsby-cli": "^4.0.0",
     "gatsby-plugin-gatsby-cloud": "^4.0.0",
@@ -29,6 +30,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-responsive": "*",
+    "recoil": "^0.5.2",
     "sass": "^1.43.3",
     "typeface-merriweather": "1.1.13",
     "typeface-montserrat": "1.1.13",
