--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dotenv": "^8.6.0",
     "framer-motion": "^5.2.1",
     "gatsby": "^4.0.0",
-    "gatsby-cli": "^4.0.0",
+    "gatsby-cli": "^4.4.0",
     "gatsby-plugin-gatsby-cloud": "^4.0.0",
     "gatsby-plugin-image": "^2.0.0",
     "gatsby-plugin-manifest": "^4.0.0",
@@ -22,6 +22,7 @@
     "gatsby-plugin-react-helmet": "^5.0.0",
     "gatsby-plugin-sass": "^5.0.0",
     "gatsby-plugin-sharp": "^4.0.0",
+    "gatsby-plugin-transition-link": "^1.20.5",
     "gatsby-source-filesystem": "^4.0.0",
     "gatsby-source-wordpress": "^6.0.0",
     "gatsby-transformer-sharp": "^4.0.0",
