--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-source-filesystem": "^4.0.0",
     "gatsby-source-wordpress": "^6.0.0",
     "gatsby-transformer-sharp": "^4.0.0",
+    "gsap": "^3.9.1",
     "html-react-parser": "^1.4.0",
     "lodash": "^4.17.21",
     "mitt": "^3.0.0",
