--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-intersection-observer": "^8.33.1",
     "react-responsive": "*",
     "recoil": "^0.5.2",
     "sass": "^1.43.3",
