--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-intersection-observer": "^8.33.1",
+    "react-player": "^2.9.0",
     "react-responsive": "*",
     "recoil": "^0.5.2",
     "sass": "^1.43.3",
