--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "gatsby": "^4.0.0",
     "gatsby-cli": "^4.4.0",
     "gatsby-plugin-gatsby-cloud": "^4.0.0",
-    "gatsby-plugin-gravity-forms": "^1.0.4",
     "gatsby-plugin-image": "^2.0.0",
     "gatsby-plugin-manifest": "^4.0.0",
     "gatsby-plugin-offline": "^5.0.0",
@@ -42,7 +41,15 @@
     "sass": "^1.43.3",
     "typeface-merriweather": "1.1.13",
     "typeface-montserrat": "1.1.13",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "@apollo/client": "^3.4.16",
+    "classnames": "^2.3.1",
+    "cross-fetch": "^3.1.4",
+    "graphql": "^15.7.1",
+    "nanoid": "^3.1.30",
+    "prop-types": "^15.7.2",
+    "react-google-recaptcha": "^2.1.0",
+    "react-hook-form": "^7.17.5"
   },
   "devDependencies": {
     "dumper.js": "^1.3.1",
