--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "url": "https://github.com/embergardens/ember-gardens-com/issues"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.16",
     "@fontsource/chivo": "^4.5.0",
     "@fontsource/titillium-web": "^4.5.0",
+    "classnames": "^2.3.1",
+    "cross-fetch": "^3.1.4",
     "dotenv": "^8.6.0",
     "framer-motion": "^6.2.4",
     "gatsby": "^4.0.0",
@@ -26,30 +29,28 @@
     "gatsby-source-filesystem": "^4.0.0",
     "gatsby-source-wordpress": "^6.0.0",
     "gatsby-transformer-sharp": "^4.0.0",
+    "graphql": "^15.7.1",
     "gsap": "^3.9.1",
     "html-react-parser": "^1.4.0",
     "lodash": "^4.17.21",
     "mitt": "^3.0.0",
+    "nanoid": "^3.1.30",
     "postcss": "^8.3.11",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-recaptcha": "^2.1.0",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.17.5",
     "react-intersection-observer": "^8.33.1",
+    "react-modal": "^3.14.4",
     "react-player": "^2.9.0",
     "react-responsive": "*",
     "recoil": "^0.5.2",
     "sass": "^1.43.3",
     "typeface-merriweather": "1.1.13",
     "typeface-montserrat": "1.1.13",
-    "uuid": "^8.3.2",
-    "@apollo/client": "^3.4.16",
-    "classnames": "^2.3.1",
-    "cross-fetch": "^3.1.4",
-    "graphql": "^15.7.1",
-    "nanoid": "^3.1.30",
-    "prop-types": "^15.7.2",
-    "react-google-recaptcha": "^2.1.0",
-    "react-hook-form": "^7.17.5"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "dumper.js": "^1.3.1",
