--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^6.2.4",
     "gatsby": "^4.11.1",
     "gatsby-cli": "^4.4.0",
+    "gatsby-plugin-env-variables": "^2.2.0",
     "gatsby-plugin-gatsby-cloud": "^4.0.0",
     "gatsby-plugin-image": "^2.0.0",
     "gatsby-plugin-manifest": "^4.0.0",
