--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-modal": "^3.14.4",
     "react-player": "^2.9.0",
     "react-responsive": "*",
+    "react-spinners": "^0.11.0",
     "recoil": "^0.7.0",
     "sass": "^1.43.3",
     "typeface-merriweather": "1.1.13",
