--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby": "^4.11.1",
     "gatsby-cli": "^4.4.0",
     "gatsby-plugin-env-variables": "^2.2.0",
+    "gatsby-plugin-ffmpeg": "^0.5.0",
     "gatsby-plugin-gatsby-cloud": "^4.0.0",
     "gatsby-plugin-image": "^2.0.0",
     "gatsby-plugin-manifest": "^4.0.0",
@@ -30,6 +31,7 @@
     "gatsby-plugin-transition-link": "^1.20.5",
     "gatsby-source-filesystem": "^4.0.0",
     "gatsby-source-wordpress": "^6.0.0",
+    "gatsby-transformer-ffmpeg": "^0.5.1",
     "gatsby-transformer-sharp": "^4.0.0",
     "graphql": "^15.7.1",
     "gsap": "^3.9.1",
