--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@apollo/client": "^3.4.16",
     "@fontsource/chivo": "^4.5.0",
+    "@fontsource/teko": "^4.5.9",
     "@fontsource/titillium-web": "^4.5.0",
     "classnames": "^2.3.1",
     "cross-fetch": "^3.1.4",
